@@ -50,7 +50,7 @@ public class TestUndefinedTypes extends TestDatabase {
         assertEquals(new Byte((byte) 4), t.getT_byte());
 
         assertEquals(5, t.getN_short());
-        assertEquals(new Short((short) 5), t.getT_short());
+        assertEquals(Short.valueOf((short) 5), t.getT_short());
 
         assertEquals(6.1, t.getN_float(), 0.001);
         assertEquals(new Float(6.1), t.getT_float(), 0.001);
@@ -172,7 +172,7 @@ public class TestUndefinedTypes extends TestDatabase {
         assertEquals(new Byte((byte) 4), t.getT_byte());
 
         assertEquals(5, t.getN_short());
-        assertEquals(new Short((short) 5), t.getT_short());
+        assertEquals(Short.valueOf((short) 5), t.getT_short());
 
         assertEquals(6.1, t.getN_float(), 0.001);
         assertEquals(new Float(6.1), t.getT_float(), 0.001);
