@@ -37,9 +37,9 @@ public class JdbcShortType extends SqlShortType implements JdbcSqlType {
     @Override
     public Object get(ResultSet rs, String columnLabel) throws SQLException {
         if (Character.isDigit(columnLabel.charAt(0)))
-            return new Short(rs.getShort(Integer.parseInt(columnLabel)));
+            return Short.valueOf(rs.getShort(Integer.parseInt(columnLabel)));
         else
-            return new Short(rs.getShort(columnLabel));
+            return Short.valueOf(rs.getShort(columnLabel));
     }
 
     /**
@@ -55,7 +55,7 @@ public class JdbcShortType extends SqlShortType implements JdbcSqlType {
      */
     @Override
     public Object get(CallableStatement cs, int index) throws SQLException {
-        Object result = new Short(cs.getShort(index));
+        Object result = Short.valueOf(cs.getShort(index));
         if (cs.wasNull())
             return null;
         else
